--- a/desktop-environments.org
+++ b/desktop-environments.org
@@ -1,5 +1,11 @@
 * Desktop Environment accessibility
-The first guideline is to communicate with users. The user will
+A desktop environment is the top-level interface that users interact
+with to launch applications, configure their system, check system
+information, and switch between open applications. These are the parts
+of the computing experience that automatically appears after the
+system is first started, and before any user applications are launched.
+
+The primary guideline is to communicate with users. The user will
 generally know what they would like rather than what wouldn't help or
 even hinder their experience. Some users may have different ideas of
 what is "accessible" versus other users. In cases like this, you'll
