--- a/operating-systems.org
+++ b/operating-systems.org
@@ -53,3 +53,36 @@ character, to another at the user's request. The engine must provide a
 speech queue, so that messages can be read sequentially, such as in
 terminal output.
 
+*** Speech Input
+It can be tempting to believe that speech input is perfect for blind
+people, since it may be hard for some to find keys on the keyboard, or
+the misunderstanding between speech input and output. Speech input
+(speech recognition) is a great way to quickly enter a small amount of
+text. Indeed, mobile phone users have grown to prefer using this over
+typing on a glass screen, unsurprisingly. Blind people overwhelmingly
+use Siri and Dictation to get things done.
+
+On a computer, however, this isn't necessary for most. Many blind people are
+taught how to type using the [[https://en.wikipedia.org/wiki/Touch_typing][Touch Typing method]] of learning to type,
+so know where the keys are. Although, some users who are learning to
+type may prefer this.
+
+*** Sounds and Latency
+Sound support must, at least, support two channels of output at
+16-bit quality, with a latency of 40 Milliseconds or lower. Sounds
+must also be able to play simultaneously, so that speech and sounds
+can play at the same time. At most,
+surround sound and virtual surround sound, through [[https://en.wikipedia.org/wiki/Head-related_transfer_function][HRTF]], provides a
+great experience, while latency should be as low as possible, to
+provide a fast, snappy-feeling experience.
+*** labels, rolls, and states
+Screen readers use different attributes of an item, hereafter called a
+/widget/, to describe what's on the screen. These attributes are:
+
+- Label :: The item's name. For example, "ok," "name," or "choose one."
+- Roll :: What an item is, or its purpose. For example, "button,"
+  "edit field," "check box."
+- State :: Relevant observations about the widget. For example,
+  "checked," "unchecked," "pressed," "has text" (inside edit field),
+  "unavailable" or "dimmed."
+
