--- a/operating-systems.org
+++ b/operating-systems.org
@@ -1,5 +1,5 @@
 * Operating System Accessibility
-An operating system, here, is the low-level programs, utilities, and
+An operating system, here, is the low-level programs, toolkits, utilities, and
 libraries that a user may not interact with directly, but which
 facilitates interaction with a desktop environment.
 ** Prime Directive
@@ -86,9 +86,16 @@ Screen readers use different attributes of an item, hereafter called a
   "checked," "unchecked," "pressed," "has text" (inside edit field),
   "unavailable" or "dimmed."
 
-*** No News is Good News
-Screen reader users will have to hear about your widgets hundreds of
-times per day. So, while it is better to be more verbose than to not
-give enough information, there must be a balance that is achieved by
-practice. Follow the [[*Prime Directive][Prime Directive]], and you'll do fine.
+*** Toolkits and Text
+User Interface toolkits must have a way for programmers to add text,
+or accessibility information, to their widgets. The toolkit should
+also expose state and roll information as well.
+*** The accessibility stack
+The accessibility of the operating system depends on what the system
+gives to the screen reader. It does this through the accessibility
+stack. Your stack must be robust enough to allow programs to give
+information about custom widgets, and rich enough to allow screen
+readers to get information about text formatting, image descriptions
+(if the application provides them), or usage hints in an unfamiliar
+application.
 
