--- a/readme.org
+++ b/readme.org
@@ -8,7 +8,7 @@ frontend experience.
 
 * in progress Contents
 
-- [ ] BIOS and UEFI
+- [[./bios.org][BIOS and UEFI]]
 - [[./operating-systems.org][Operating Systems]]
 - [[./desktop-environments.org][Desktop Environments]]
 - [[./applications.org][Applications]]
