--- a/readme.org
+++ b/readme.org
@@ -3,10 +3,10 @@
 This repository is for the documenting of UI and UX accessibility
 patterns that can be used by developers, testers, and auditors for
 determining the accessibility of an operating system desktop or
-"shell," programs running atop a desktop, web pages, or other
-frontend experience.
+"shell", programs running atop a desktop, web pages, or other frontend
+experience.
 
-* in progress Contents
+* Contents [in progress]
 
 - [[./bios.org][BIOS and UEFI]]
 - [[./operating-systems.org][Operating Systems]]
@@ -14,14 +14,16 @@ frontend experience.
 - [[./applications.org][Applications]]
 - [[./web.org][Webpages]]
 - [[./documents.org][Documents]]
+
 * Contributing and Contacting
+
 This repository will not reach its full potential without
 contributions from other people with disabilites, programmers, and
-other Invested people. So, you can either fork the repository, make
+other invested people. So, you can either fork the repository, make
 changes, and send pull requests, ask to be added as a contributor (if
-you plan on contributing heavily), or send requested changes via Email
-or other communication channels. Just please send the changes through
-a channel that supports long, multi-line messages.
+you plan on contributing heavily), or send requested changes via
+e-mail or other communication channels. Just please send the changes
+through a channel that supports long, multi-line messages.
 
 My contact info is below:
 
